test/features/errors/control_flow/e1102_continue_outside_loop.spl
# E1102: Continue Outside Loop

Feature: E1102 - Continue Can Only Be Used Inside a Loop
  As a Simple compiler
  I want to detect continue statements outside loops
  So that continue is only used in valid contexts

  Background:
    Given I have the Simple compiler

  Scenario: Continue in function body
    When I compile:
      '''
      fn test():
        continue  # Error: not in a loop
      '''
    Then I should see error E1102 at line 2
    And the error message should be "`continue` can only be used inside a loop"
    And the label should indicate "not in a loop"
    And the help should suggest "use `continue` inside `for`, `while`, or `loop` statements"

  Scenario: Continue in if statement
    When I compile:
      '''
      fn test():
        if true:
          continue  # Error: not in a loop
      '''
    Then I should see error E1102

  Scenario: Valid continue in loop
    When I compile:
      '''
      fn test():
        for x in 0..10:
          if x % 2 == 0:
            continue  # OK: inside loop
          print(x)
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        continue
      '''
    Then I should see error E1102
    And the error message should contain "루프 외부의 continue"
